package patterns.behavior.memento

interface IMemento {
    fun getState(): String
}